--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
 Flask==1.1.1
+Flask-Admin==1.5.4
 Flask-Migrate==2.5.2
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.2
